# simple-folder-syncer

./: .gitignore  Cargo.toml  README.md  build.bat  install-schedule.bat  package.wxs  reconnect-netdrive.bat  uninstall-schedule.bat
.github/workflows/: release.yml
docs/: msi.md
src/: main.rs
